vah264dec should (have ability to) drop corrupted frames
Some IP cameras produces corrupted (green with va, gray with avdec) frames in the beginning of the RTSP stream unless wait-for-keyframe=1
is set for rtph264depay
.
If we save this corrupted stream using mp4mux
and filesink
, and then play that file using vah264dec
we get green frames, but NOT with older/deprecated vaapih264dec.
avdec_h264
can avoid corrupted frames by setting output-corrupted=0
, but there's no such option in new vah264dec
, nor it does that by default as vaapih264dec
does.
Here's sample video with corrupted RTSP stream. video_no_wait_for_keyframe