h264decoder: Mark corrupted if IDR frame is not observed

Set GST_VIDEO_CODEC_FRAME_FLAG_CORRUPTED on a frame if it's expected
to be corrupted because of missing reference picture.

Fixes: https://gitlab.freedesktop.org/gstreamer/gstreamer/-/issues/2994